tutorial/flask-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-tip-k8s-svc
spec:
  selector:
    app: tip-app
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
      #type: LoadBalancer
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask1-tip-k8s
  labels:
    app: tip-app
    version: flask1
spec:
  selector:
    matchLabels:
      app: tip-app
      version: flask1
  replicas: 2
  template:
    metadata:
      labels:
        app: tip-app
        version: flask1
    spec:
      containers:
      - name: tip-app
        image: tip-app:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 5000
          #restartPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask2-tip-k8s
  labels: 
    app: tip-app
    version: flask2
spec:
  selector:
    matchLabels:
      app: tip-app
      version: flask2
  replicas: 2
  template:
    metadata:
      labels:
        app: tip-app
        version: flask2
    spec:
      containers:
      - name: tip-app
        image: tip-app:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 5000
          #restartPolicy: Never
